[package]
name = "supersecret"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.7"

[[bin]]
name = "supersecret"
path = "supersecret.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
